--- a/www/admin.html
+++ b/www/admin.html
@@ -1,14 +1,17 @@
 <div id="ajaxdata">
-    <ul class="nav nav-pills nav-justified">
-        <li class="active"><a href="#">Add Client</a>
-        </li>
-        <li><a href="#">Change Password</a>
-        </li>
-        <li><a class="logout" href="#">Logout</a>
-        </li>
-    </ul>
+    <div role="tabpanel">
 
-    <div id="adminBox">
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#add_client" aria-controls="home" role="tab" data-toggle="tab">Add Client</a></li>
+    <li role="presentation"><a href="#password" aria-controls="profile" role="tab" data-toggle="tab">Change Password</a></li>
+    <li role="presentation"><a href="#" aria-controls="messages" role="tab" data-toggle="tab">Logout</a></li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+
+    <div role="tabpanel" class="tab-pane active" id="add_client">
         <h1>Add Client</h1>
         <form role="form" id="newClient">
             <div class="form-group">
@@ -16,23 +19,40 @@
                 <input type="text" class="form-control" id="clientNamem" name="clientNamem" placeholder="Item Number">
             </div>
             <div class="form-group">
-                <label>Client Contract Number</label>
-                <input type="text" class="form-control" id="clientContractm" name="clientContractm" placeholder="Item Number">
-            </div>
-            <div class="form-group">
-                <label>Client Workplace</label>
-                <input type="text" class="form-control" id="clientWorkm" name="clientWorkm" placeholder="Item Number">
-            </div>
-            <div class="form-group">
                 <label for="obsImages">Client Logo</label>
                 <input type="hidden" value="0" class="obsImages" name="obsImages" />
                 <div>
-                    <button type="button" class="btn btn-info addmedia"><span class="glyphicon glyphicon-camera"></span> Take Photo</button>
-                    <button type="button" class="btn btn-warning  addmedialib"><span class="glyphicon glyphicon-picture"></span> Photo Library</button>
-                        
+                    <button type="button" class="btn btn-info clientlogoadd"><span class="glyphicon glyphicon-camera"></span> Take Photo</button>
+                    <button type="button" class="btn btn-warning  clientlogoaddlib"><span class="glyphicon glyphicon-picture"></span> Photo Library</button>
+                    <div class="clientlogocont"></div>
+                    <input type="hidden" name="clientLogo" class="clientlogo" value="" />
                 </div>
             </div>
-            <button type="submit" class="btn btn-success pull-right">Add Client</button>
+            <button type="submit" class="btn btn-success pull-right needsclick">Add Client</button>
         </form>
     </div>
+        <div role="tabpanel" class="tab-pane" id="password">
+            <h1>Change Password</h1>
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">New Password</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" id="inputEmail3" placeholder="New Password">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Confirm Password</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" id="inputPassword3" placeholder="Again">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-success needsclick">Change Password</button>
+                </div>
+              </div>
+            </form>
+        </div>
+      </div>
+        </div>
 </div>
