--- a/www/admin.html
+++ b/www/admin.html
@@ -5,7 +5,7 @@
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#add_client" aria-controls="home" role="tab" data-toggle="tab">Add Client</a></li>
     <li role="presentation"><a href="#password" aria-controls="profile" role="tab" data-toggle="tab">Change Password</a></li>
-    <li role="presentation"><a href="#" aria-controls="messages" role="tab" data-toggle="tab">Logout</a></li>
+    <li role="presentation"><a href="#" class="logout" aria-controls="messages" role="tab" data-toggle="tab">Logout</a></li>
   </ul>
 
   <!-- Tab panes -->
