--- a/www/index.html
+++ b/www/index.html
@@ -146,16 +146,19 @@
             <div class="" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html" class="innerlink active dashboard" title="Dashboard"><i class="glyphicon glyphicon-home"></i><br>Dashboard</a>
+                        <a href="index.html" class="innerlink active dashboard" title="South Wales Safety Consultancy"><i class="glyphicon glyphicon-home"></i><br>Dashboard</a>
                     </li>
                     <li>
-                        <a href="new-report.html" class="innerlink" title="Safety Inspection Report"><i class="glyphicon glyphicon-plus-sign"></i><br>Add New</a>
+                        <a href="new-report.html" class="innerlink" title="New Safety Inspection Report"><i class="glyphicon glyphicon-plus-sign"></i><br>Add New</a>
                     </li>
                     <li>
-                        <a href="reports.html" class="innerlink" title="Reports"><i class="glyphicon glyphicon-search"></i><br>View Reports</a>
+                        <a href="reports.html" class="innerlink" title="View Safety Inspection Report"><i class="glyphicon glyphicon-search"></i><br>View Reports</a>
                     </li>
                     <li>
-                        <a href="admin.html" class="innerlink" title="Admin"><i class="glyphicon glyphicon-cog"></i><br>Admin</a>
+                        <a href="sync.html" class="innerlink" title="Sync Data"><i class="glyphicon glyphicon-refresh"></i><br>Sync</a>
+                    </li>
+                    <li>
+                        <a href="#" class="logout" title="Admin"><i class="glyphicon glyphicon-log-out"></i><br>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -164,7 +167,7 @@
         <!-- /.container -->
     </nav>
     <div class="container" id="main">
-        <p>Note: this page will contain a breakdown of reports.</p>
+        
     </div>
     <div class="footer sync" id="sync">
         <div class="container">
