--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -16,7 +16,7 @@
                 	<h2>View Reports</h2>
                     <p>View previously saved reports.</p>
                 </a>
-                <a href="sync.html" class="list-group-item syncpage">
+                <a href="sync.html" class="list-group-item innerlink syncpage">
                 	<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
                 	<h2>Sync Data</h2>
                     <p>Sync data to and from the central server.</p>
@@ -25,6 +25,11 @@
                 	<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
                 	<h2>Logout</h2>
                     <p>Logout of the app and return to login screen.</p>
+                </a>
+                <a href="debug.html" class="list-group-item innerlink">
+                	<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
+                	<h2>Debug</h2>
+                    <p>Developer only - shows debug data</p>
                 </a>
             </div>
         </div>
