--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -199,7 +199,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <a href="dashboard.html" class="innerlink topbarhome"><i class="fa fa-home fa-fw"></i></a> <span class="navbar-brand">Dashboard</span>
+            <a href="dashboard.html" class="topbarhome" data-loc="dash"><i class="fa fa-home fa-fw"></i></a> <span class="navbar-brand">Dashboard</span>
         </div>
     </nav>
     <div class="container" id="main">
