--- a/platforms/ios/www/new-report.html
+++ b/platforms/ios/www/new-report.html
@@ -149,7 +149,7 @@
                 <div class="checkbox">
                     <label>
                         <input type="hidden" id="inlineCheckbox14" name="inlineCheckbox[14]" value="0"><span class="totalBox totalBox14">0</span> 
-                        <button type="button" class="btn btn-success btn-xs addObsButton" rel="14">Add</button>14.
+                        <button type="button" class="btn btn-success btn-xs addObsButton" data-title="" rel="14">Add</button>14. <span class="itemName14"></span>
                     </label>
                 </div>
                 <div class="checkbox">
@@ -203,7 +203,7 @@
                 <div class="checkbox">
                     <label>
                         <input type="hidden" id="inlineCheckbox23" name="inlineCheckbox[23]" value="0"><span class="totalBox totalBox23">0</span> 
-                        <button type="button" class="btn needsclick btn-success btn-xs addObsButton" rel="23">Add</button>23.
+                        <button type="button" class="btn needsclick btn-success btn-xs addObsButton" data-title="" rel="23">Add</button>23. <span class="itemName23"></span>
                     </label>
                 </div>
                 <div class="checkbox">
