--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -6,17 +6,17 @@
         </div>
         <div class="col-md-6 dashbox">
             <div class="list-group">
-                <a href="new-report.html" data-loc="new-report" class="list-group-item innerlink">
+                <a href="new-report.html" title="Add New Report" data-loc="new-report" class="list-group-item innerlink">
                 	<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
                 	<h2>Add New Report</h2>
                     <p>Add a new safety report here.</p>
                 </a>
-                <a href="reports.html" data-loc="reports" class="list-group-item innerlink">
+                <a href="reports.html" title="Reports" data-loc="reports" class="list-group-item innerlink">
                 	<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
                 	<h2>View Reports</h2>
                     <p>View previously saved reports.</p>
                 </a>
-                <a href="sync.html" data-loc="sync" class="list-group-item innerlink syncpage">
+                <a href="sync.html" title="Sync" data-loc="sync" class="list-group-item innerlink syncpage">
                 	<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
                 	<h2>Sync Data</h2>
                     <p>Sync data to and from the central server.</p>
@@ -26,7 +26,7 @@
                 	<h2>Logout</h2>
                     <p>Logout of the app and return to login screen.</p>
                 </a>
-                <a href="debug.html" data-loc="debug" class="list-group-item innerlink">
+                <a href="debug.html" title="Debug" data-loc="debug" class="list-group-item innerlink">
                 	<span class="badge"><i class="glyphicon glyphicon-chevron-right"></i></span>
                 	<h2>Debug</h2>
                     <p>Developer only - shows debug data</p>
